# mehlog

./: .clang-format  CMakeLists.txt  LICENSE  README.md  changelog.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  basic_example.cpp  glog_example.cpp  spdlog_example.cpp
include/mehlog/: mehlog.hpp
include/mehlog/adapters/: glog.hpp  spdlog.hpp
tests/: CMakeLists.txt  mehlog_test.cpp
